--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -29,7 +29,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 999;
+    z-index: 2;
     background-color: #fff;
     margin-left: auto;
     margin-right: auto;
@@ -39,16 +39,11 @@ body {
     max-width: 1440px;
     display: inline-block;
     padding: 8px 32px;
-    /* opacity: 0.9; */
     overflow: hidden;
     white-space: nowrap;
-    /* border-bottom: 1px solid #ccc; */
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eeeeee+0,a5a5a5+100 */
-    background: rgb(238,238,238); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(238,238,238,1) 0%, rgba(165,165,165,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(165,165,165,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(165,165,165,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#a5a5a5',GradientType=0 ); /* IE6-9 */
+    background: #d1ccc0;
+    border-bottom: 2px solid #fff;
+  
 }
 
 .logo{
@@ -64,7 +59,7 @@ body {
   padding: 5px;
 }
 
-.menu_text {
+.menu-text {
     float: right;
     display: inline-block;
     margin-top: 2px;
@@ -103,10 +98,40 @@ background-color: rgb(40, 100, 184);
 
 
 .menu-btn {
+  text-decoration: none;
+  font-size: .7em;
+  font-weight: 400;
   border-radius: 2px;
   padding: 8px 22px;
-  background-color: rgb(40, 127, 184);
+  color: #2c2c54;
+  background-color: #d1ccc0;
+  border: 2px solid #2c2c54;
+  cursor: pointer; 
+}
+
+.menu-btn:hover {
+  background-color:#2c2c54;
   color: #fff;
+  cursor: pointer; 
+}
+
+.inverse-menu-btn {
+  text-decoration: none;
+  font-size: .7em;
+  font-weight: 400;
+  border-radius: 2px;
+  padding: 8px 22px;
+  background-color:#2c2c54;
+  border: 1px solid #2c2c54;
+  color: #fff;
+  cursor: pointer; 
+}
+
+.inverse-menu-btn:hover {
+  color: #2c2c54;
+  background-color: #d1ccc0;
+  border: 2px solid #2c2c54;
+  cursor: pointer; 
 }
 
 .main-banner {
@@ -126,7 +151,7 @@ background-color: rgb(40, 100, 184);
     background: linear-gradient(
                      rgba(20,20,20, .5), 
                      rgba(20,20,20, .5)), 
-                   url(img/splash1.jpg) no-repeat center;
+                   url(splash2.jpeg) no-repeat center;
     /* background: url(img/splash1.jpg) no-repeat center; */
     background-repeat: no-repeat;
     background-size: cover;
@@ -135,18 +160,36 @@ background-color: rgb(40, 100, 184);
     padding-top: 100px;
 }
 
-h1 {
-  font-size: 60px;
+.main-banner .slogan h1 {
+  font-size: 70px;
   font-weight: 300;
   text-align: center;
   color: #fff;
-  margin-top: 40px;
+  margin-top: 20px;
   margin-bottom: 0;
 }
-h2 {
+ .main-banner .slogan h2 {
   font-size: 35px;
   font-weight: 200;
   text-align: center;
   color: #fff;
   margin-top: 0;
+}
+
+.current-user {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 32px;
+  line-height: 1;
+  cursor: pointer;
+}
+
+.modal-close:hover {
+  color: blue;
 }
