--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -22,7 +22,8 @@
   padding: 13px 10px;
   border-radius: 3px;
   border: 1px solid #ccc;
-  font-size: 16px;  
+  font-size: 16px; 
+  margin-bottom: 10px; 
 }
 
 .modal-form input:first-child {
