Add fix for images

--- a/app/views/static_pages/root.html
+++ b/app/views/static_pages/root.html
@@ -1,2 +1,9 @@
+
+<script type="text/javascript">
+  window.staticImages = {
+	  imageName: "<%= asset_url "splash2.jpg" %>"
+  }
+</script>
+
 <div id="root">
 </div>
