--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -151,7 +151,7 @@ background-color: rgb(40, 100, 184);
     background: linear-gradient(
                      rgba(20,20,20, .5), 
                      rgba(20,20,20, .5)), 
-                   image-url("splash2.jpg") no-repeat center;
+                     url("splash2.jpg") no-repeat center;
     /* background: url(img/splash1.jpg) no-repeat center; */
     background-repeat: no-repeat;
     background-size: cover;
