--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -151,8 +151,7 @@ background-color: rgb(40, 100, 184);
     background: linear-gradient(
                      rgba(20,20,20, .5), 
                      rgba(20,20,20, .5)), 
-                     url("splash2.jpg") no-repeat center;
-    /* background: url(img/splash1.jpg) no-repeat center; */
+                     image_url("splash2.jpg") no-repeat center;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
