--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -30,11 +30,11 @@
   margin-bottom: 10px;
 
 }.modal-form input:last-child {
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 
 .modal-form .submit {
-   margin: 32px 0 0 20px;
+   margin: 20px 0 0 20px;
    display: flex;
    justify-content: flex-end;   
 }
@@ -58,6 +58,11 @@
   background-color: #fff;
   border: 2px solid #2c2c54;
   cursor: pointer; 
+}
+
+.modal-form button:hover {
+  background-color: #2c2c54;
+  color: #fff;
 }
 
 .modal-form  h1 {
