--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -25,45 +25,43 @@ body {
     z-index: 1;
 }
 
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 2;
-    background-color: #fff;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .container-menu {
-    max-width: 1440px;
-    display: inline-block;
-    padding: 8px 32px;
-    overflow: hidden;
-    white-space: nowrap;
-    background: #d1ccc0;
-    border-bottom: 2px solid #fff;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1440px;
+  display: flex;
+  padding: 8px 32px;
+  overflow: hidden;
+  white-space: nowrap;
+  background: #d1ccc0;
+  border-bottom: 2px solid #fff;
   
 }
 
 .logo{
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 45px;
-  min-height: 45px;
-  background-color: #000;
-  font-size: 12px;
-  color: #fff;
-  display: block;
-  padding: 5px;
+  display: flex;
+  justify-content: flex-start;
+  width: 30%;
+}
+
+.logo h3 {
+  color: #2c2c54;
+  font-family: 'Cedarville Cursive', cursive;
+  font-size: 30px;
+  padding: 5px 0 0 5px;
 }
 
 .menu-text {
     float: right;
-    display: inline-block;
+    display: flex;
+    justify-content: flex-end;
     margin-top: 2px;
     margin-bottom: 6px;
+    width: 70%;
 }
 
 .main-nav {
@@ -111,7 +109,7 @@ background-color: rgb(40, 100, 184);
 
 .menu-btn:hover {
   background-color:#2c2c54;
-  color: #fff;
+  color: #e67e22; 
   cursor: pointer; 
 }
 
@@ -128,10 +126,10 @@ background-color: rgb(40, 100, 184);
 }
 
 .inverse-menu-btn:hover {
-  color: #2c2c54;
-  background-color: #d1ccc0;
-  border: 2px solid #2c2c54;
-  cursor: pointer; 
+  color: #e67e22;
+//   background-color: #d1ccc0;
+//   border: 2px solid #2c2c54;
+//   cursor: pointer; 
 }
 
 .main-banner {
@@ -191,4 +189,201 @@ background-color: rgb(40, 100, 184);
 
 .modal-close:hover {
   color: blue;
+}
+
+.why-join {
+  padding: 20px;
+  display: flex;
+  background-color: #3498db;
+  justify-content: space-around;
+  
+}
+
+.why-join-slogan {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  background-color: #3498db;
+  border-top: 1px solid #fff;
+}
+
+.why-join-slogan h1{
+  color: #fff;
+ letter-spacing: 5px;
+ font-size: 44px;
+ font-weight: 300;
+ padding-bottom: 10px;
+ margin-bottom: 5px;
+}
+
+.why-join-item {
+  padding: 25px;
+  // border: 1px solid #fff;
+  background-color: #2980b9;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 16px;
+  width: 390px;
+  text-align: center;
+  
+}
+.why-join-item h3{
+  text-align: center;
+  font-size: 16px;
+}
+.why-join-item p{
+  text-align: center;
+  font-weight: 200;
+ line-height: 1.5;
+}
+
+
+.why-join-item img {
+  width: 340px;
+  border-radius: 3px;
+  opacity: 0.8;
+  transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
+  margin-bottom: 12px;
+}
+
+.why-join-item img:hover {
+  transform: scale(1.05);
+  // transform: skewY(5deg);
+  opacity: 1;
+}
+
+.mod-white {
+  // color: #fff;
+  background-color: #fff;
+  width: 50px;
+  height: 3px;
+  border: none;
+  text-align: center;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top: 5px;
+}
+.mod-white-short {
+  background-color: #fff;
+  width: 20px;
+  height: 2px;
+  border: none;
+  text-align: center;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+
+.how-it-works-slogan {
+  display: block;
+  text-align: center;
+  padding: 20px;
+  background-color: #e67e22;
+  border-top: 1px solid #fff;
+}
+
+.how-it-works-slogan h1{
+  color: #fff;
+  letter-spacing: 5px;
+  font-size: 44px;
+  font-weight: 300;
+  padding-bottom: 10px;
+  margin-bottom: 5px;
+}
+
+.how-it-works {
+  background-color: #e67e22;
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.how-it-works-item {
+  padding: 25px;
+  background-color: #ed6504;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 16px;
+  width: 390px;
+  text-align: center;
+}
+
+.how-it-works-item img {
+  // width: 100px;
+}
+.how-it-works-item h3 {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.how-it-works-item  p{
+  text-align: center;
+  font-weight: 300;
+ line-height: 1.5;
+}
+
+.table-options {
+  display: flex;
+  background-color:  #e67e22;
+}
+
+table {
+  width: 600px;
+  margin:auto;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 300;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+table, tr, td {
+  // border: 1px solid #fff;
+  border-collapse: separate;
+  border-spacing: 0;
+}
+
+tr:first-child, tr:last-child {
+  border-collapse: separate;
+}
+
+td {
+  padding: 14px;
+  text-align: center;  
+}
+
+tr:nth-child(even) {
+  background-color: #ed6504;
+  border-radius: 0;
+}
+
+tr td:first-child {
+  text-align: left;
+  padding-left: 20px;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+table h1 {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+tr:nth-child(1) td:nth-child(2) {
+  border-top: 1px solid #fff;
+  border-radius: 4px 4px 0 0;
+}
+
+tr td:nth-child(2) {
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
+}
+tr:last-child td:nth-child(2){
+  border-bottom: 1px solid #fff;
+  border-radius: 0 0 4px 4px;
 }
