Add link to locations from nav_bar

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -88,6 +88,7 @@ body {
   border: none;
   letter-spacing: 1px;
   margin-right: 16px;
+  font-family: Roboto, sans-serif;
 }
 
 .menu-item:hover {
