--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -74,9 +74,6 @@ body {
   margin-right: 20px;
 }
 
-.menu-text input {
-  margin-right: 60px;
-}
 
 .menu-item {
   // -webkit-appearance: none;
@@ -97,15 +94,35 @@ body {
 }
 
 .menu-text input {
+    margin-right: 60px;
     border: 1px solid #2c2c54;
-    // border-right: none;
     border-radius: 20px;
     font-size: 16px;
+    font-weight: 300;
     height: 36px;
     padding: 0 20px;
     width: 250px;
-    color: #929dad;
+    color:#2c2c54;
     background-color: #d1ccc0;
+    font-family: Roboto, sans-serif;
+}
+ 
+ .menu-text input::placeholder {
+   color:#2c2c54;
+   font-family: Roboto, sans-serif;
+ }
+.menu-text input:focus {
+   background-color: #2c2c54;
+   color: #fff;
+   font-size: 16px;
+   font-weight: 300;
+   font-family: Roboto, sans-serif;
+ }
+
+input {
+  font-size: 16px;
+  font-weight: 300;
+  font-family: Roboto, sans-serif;
 }
 
 .menu-btn {
@@ -570,6 +587,14 @@ tr:last-child td:nth-child(2){
 .location-index-item a, .location-index-item a:active,.location-index-item a:hover {
   text-decoration: none;
 }
+.location-index-item a{
+  transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
+  opacity: 0.92;
+}
+.location-index-item a:hover {
+  transform: scale(1.05);
+  opacity: 1;
+}
 
 .location-index-item-loc {
   color: white;
@@ -634,9 +659,10 @@ tr:last-child td:nth-child(2){
   // border: 1px dashed red;
   flex-wrap: wrap;
   min-width: 400px;
-  justify-content: center;
+  justify-content: space-between;
   font-size: 16px;
   font-weight: 300;
+
 }
 .host-list li {
   background-color: #fff;
@@ -663,6 +689,107 @@ tr:last-child td:nth-child(2){
     outline: none;
 }
 
-input[type=search]:focus {
-    background-color: #fff;
+.profile-container {
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 10px;
+  border: 1px dashed red;
+  justify-content: center;
+}
+
+.profile-item {
+  width:20%;
+  padding: 10px;
+  // border: 2px solid #2c2c54;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  margin-right: 5px;
+}
+.profile-item img{
+  width: 150px;
+  border-radius: 50%;
+}
+
+.profile-item h1 {
+  font-size: 18px;
+  font-weight: 400;
+}
+.profile-item h2 {
+  font-size: 16px;
+  font-weight: 300;
+  color: #2c2c54;
+}
+
+.profile-reviews-container {
+  width: 80%;
+  // padding: 10px;
+  border: 1px dashed #fff;
+  margin-left: 10px;
+  display: flex;
+}
+
+.profile-review {
+  padding: 10px;
+  width: 50%;
+  border: 1px dashed blue;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+}
+
+.profile-booking{
+  padding: 10px;
+  width: 50%;
+  border: 1px dashed violet;
+}
+
+.profile-review h1{
+  font-size: 18px;
+  font-weight: 300;
+  color: #fff;
+  text-align: center;
+}
+
+.profile-review form {
+  display: flex;
+  flex-direction: column;
+  background-color: #2c2c54;
+  justify-content: space-between;
+  // align-items: ;
+  width: 100%;
+  margin: auto;
+  height: 250px;
+  border-radius: 4px;
+  padding: 15px;
+}
+
+.profile-review form input[text]{
+  display: block;
+  margin: 10px;
+}
+
+.profile-review form textarea{
+  display: block;
+  font-size: 14px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  flex: 2 0 0;
+}
+
+.profile-details{
+  text-decoration: none;
+  font-size: .7em;
+  border-radius: 5px;
+  font-weight: 300;
+  border-radius: 1px;
+  padding: 6px 8px;
+  color: #2c2c54;
+  background-color: #fff;
+  border: 2px solid #2c2c54;
+  cursor: pointer; 
+  margin-left: 10px;
 }
