--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -50,11 +50,12 @@ body {
   align-items: center;
 }
 
-.logo h3 {
+.logo a, .logo a:active, .logo a:visited {
   color: #2c2c54;
   font-family: 'Cedarville Cursive', cursive;
   font-size: 30px;
   padding: 5px 0 0 5px;
+  text-decoration: none;
 }
 
 .menu-text {
@@ -754,11 +755,12 @@ tr:last-child td:nth-child(2){
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: stretch;
   border-radius: 4px;
   margin-right: 5px;
-  height: 300px;
-  
+  min-height: 300px;
+  min-width: 240px;
+  height: 350px;
 }
 .profile-item img{
   width: 150px;
@@ -766,16 +768,37 @@ tr:last-child td:nth-child(2){
   border:1px solid #000;
   padding: 2px;
   background-color: #e67e22;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .profile-item h1 {
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 300;
+  text-align: center;
 }
 .profile-item h2 {
   font-size: 16px;
   font-weight: 300;
   color: #2c2c54;
+}
+
+.profile-item a, .profile-item a:active {
+  text-decoration: none;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  color:#2c2c54;
+  margin-bottom: 15px;
+}
+
+.profile-item p {
+  text-align: justify;
+  font-size: 14px;
+  padding: 5px;
+  font-weight: 300;
+  margin-top: 15px;
 }
 
 .profile-reviews-container {
