Update css to fix headings on the location page

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -558,7 +558,7 @@ tr:last-child td:nth-child(2){
 
 .location-background {
   background-color: #f8f8f9;
-  // padding-top: 64px;
+  padding-top: 58px;
 }
 
 .location-slogan {
