--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -445,6 +445,7 @@ tr:last-child td:nth-child(2){
   border-radius: 3px;
   background-color: #fff;
   margin-right: 10px;
+  box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.2);
 }
 
 .dashboard-left img {
@@ -520,6 +521,7 @@ tr:last-child td:nth-child(2){
   margin-bottom: 10px;
   border-radius: 3px;
   background-color: #fff;
+  box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.2);
 }
 
 .dashboard-locations h1, .dashboard-travel-plans h1{ 
@@ -534,6 +536,7 @@ tr:last-child td:nth-child(2){
   height: 280px;
   border-radius: 3px;
   background-color: #fff;
+  box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.2);
 }
 
 .dashboard-item {
