--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -371,7 +371,7 @@ input {
   background-color:  #e67e22;
 }
 
-table {
+.table-options table {
   width: 600px;
   margin:auto;
   border-radius: 3px;
@@ -382,48 +382,48 @@ table {
   margin-bottom: 60px;
 }
 
-table, tr, td {
+.table-options table, tr, td {
   // border: 1px solid #fff;
   border-collapse: separate;
   border-spacing: 0;
 }
 
-tr:first-child, tr:last-child {
+.table-options tr:first-child, tr:last-child {
   border-collapse: separate;
 }
 
-td {
+.table-options td {
   padding: 14px;
   text-align: center;  
 }
 
-tr:nth-child(even) {
+.table-options tr:nth-child(even) {
   background-color: #ed6504;
   border-radius: 0;
 }
 
-tr td:first-child {
+.table-options tr td:first-child {
   text-align: left;
   padding-left: 20px;
   font-size: 18px;
   font-weight: 300;
 }
 
-table h1 {
+.table-options table h1 {
   font-size: 20px;
   font-weight: 300;
 }
 
-tr:nth-child(1) td:nth-child(2) {
+.table-options tr:nth-child(1) td:nth-child(2) {
   border-top: 1px solid #fff;
   border-radius: 4px 4px 0 0;
 }
 
-tr td:nth-child(2) {
+.table-options tr td:nth-child(2) {
   border-left: 1px solid #fff;
   border-right: 1px solid #fff;
 }
-tr:last-child td:nth-child(2){
+.table-options tr:last-child td:nth-child(2){
   border-bottom: 1px solid #fff;
   border-radius: 0 0 4px 4px;
 }
@@ -553,10 +553,12 @@ tr:last-child td:nth-child(2){
   border-radius: 4px;
 }
 
-.dashboard-item h2 {
+.dashboard-travel-plans h2 {
   font-size: 18px;
   font-weight: 300;
-  color: #ccc;
+  color: #e67e22;
+  width: 100%;
+  text-align: center;
 }
 
 .location-background {
@@ -912,7 +914,7 @@ tr:last-child td:nth-child(2){
   padding: 5px;
   background-color: #fff;
   border-radius: 3px;
-  height: 300px;
+  height: 340px;
   border: 1px solid #ccc;
 }
 
@@ -920,7 +922,7 @@ tr:last-child td:nth-child(2){
   font-size: 22px;
   font-weight: 400;
   text-align: center;
-
+  color: #2c2c54;
 }
 
 
@@ -1011,4 +1013,121 @@ tr:last-child td:nth-child(2){
     border-top: 1px solid #ccc;
     margin:  0;
     padding: 0;
+}
+
+.dashboard-bookings {
+  width: 100%;
+  padding-left: 10px; 
+  padding-right: 10px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+.dashboard-bookings table {
+  width: 100%;
+  border: 1px solid #e67e22;
+  font-size: 16px;
+  border-collapse: separate;
+  border-spacing: 0;
+  border-radius: 4px;
+  font-weight: 300;
+}
+.dashboard-bookings tr td {
+  padding: 6px;
+  // text-align: center;
+}
+
+.dashboard-bookings tr:first-child{
+  background-color: #e67e22;
+  color: #fff;
+  // text-align: center;
+}
+.dashboard-bookings tr:nth-child(3) {
+  background-color: #eee;
+}
+
+.cancel-booking {
+  webkit-appearance: none;
+  background-color: #e67e22;
+  padding: 5px;
+  color: #fff;
+  border-radius: 3px;
+  font-size: 12px;
+  font-weight: 300;
+  cursor: pointer;
+}
+
+.cancel-booking:hover{
+  background-color: #000;
+}
+
+.reservation {
+  font-size: 14px;
+  font-weight: 300;
+  width: 100%;
+  padding: 5px;
+}
+.datepickers{
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+}
+.datepickers input[type='date']{
+  margin-left: 10px;
+  font-size: 14px;
+  padding: 4px;
+  border: 1px solid #2c2c54;
+  border-radius: 3px;
+}
+
+.host-message {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+
+.host-message textarea {
+  height: 125px;
+  padding: 5px;
+  font-size: 14px;
+  font-family: Roboto, sans-serif;
+  font-weight: 300;
+  border-radius: 4px;
+  border: 1px solid #2c2c54;
+}
+
+::placeholder {
+    color: #000;
+    font-size: 14px;
+    font-weight: 300;
+    opacity: .7; /* Firefox */
+}
+
+.submit-booking {
+  margin-top: 15px;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.submit-booking input {
+  margin-left: 15px;
+  padding: 8px;
+  background-color: #2c2c54;;
+  color: #fff;
+  border-radius: 3px;
+  border: none;
+  font-family: Roboto, sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.submit-booking input[type='reset'] {
+  padding: 8px 14px;
 }
