--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1155,3 +1155,73 @@ input {
 .submit-booking input[type='reset'] {
   padding: 8px 14px;
 }
+
+.confirmation-container {
+  padding: 5px;
+}
+
+.confirmation-container h2 {
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.booking-details {
+  padding: 10px;
+  margin-top: 15px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+
+}
+
+.booking-details p {
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.booking-details section {
+  width: 90%;
+  margin-top: 10px;
+}
+
+.arrival-departure {
+  display: flex;
+  justify-content: space-around;
+}
+
+.message {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  font-size: 16px;
+  font-weight: 300;
+  height: 200px;
+  max-height: 200px;
+  overflow-y:  hidden;
+  text-overflow: ellipsis;
+}
+
+.message p {
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.booking-submit {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 5px;
+}
+
+.booking-submit button {
+  margin-left: 15px;
+  padding: 8px;
+  background-color: #2c2c54;
+  color: #fff;
+  border-radius: 3px;
+  border: none;
+  font-family: Roboto, sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  cursor: pointer;
+}
