Add linkedin and github images to assets pipeline

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,8 @@
     <script type="text/javascript">
       window.staticImages = {
     	  imageName: "<%= asset_url "splash2.jpg" %>",
-    	  loungeLogo: "<%= asset_url "lounge-logo.png" %>"
+    	  github: "<%= asset_url "github-color.svg" %>",
+    	  linkedin: "<%= asset_url "linkedin-color.svg" %>"
       }
     </script>
     
