--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -9,7 +9,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /*border: 1px dotted gray;*/
+    // border: 1px dotted pink;
 }
 
 body {
@@ -23,23 +23,25 @@ body {
     margin-right: auto;
     margin-left: auto;
     z-index: 1;
-    border: 1px solid #ccc;
+    // border: 1px solid #ccc;
 }
 
 .container-menu {
   position: fixed;
   top: 0;
-  width: 99%;
+  width: 100%;
   z-index: 9;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1438px;
+  max-width: 1440px;
   display: flex;
   padding: 8px 32px;
   overflow: hidden;
   white-space: nowrap;
   background: #fff;
   border-bottom: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
   // border: 1px solid #ccc;
   border-top: none;
   align-items: center;
@@ -56,7 +58,7 @@ body {
 .logo a, .logo a:active, .logo a:visited {
   color: #2c2c54;
   font-family: 'Cedarville Cursive', cursive;
-  font-size: 30px;
+  font-size:100%;
   padding: 5px 0 0 5px;
   text-decoration: none;
 }
@@ -88,6 +90,7 @@ body {
   letter-spacing: 1px;
   margin-right: 16px;
   font-family: Roboto, sans-serif;
+  background-color: transparent;
 }
 
 .menu-item:hover {
@@ -142,7 +145,7 @@ input {
   font-size: .7em;
   font-weight: 200;
   border-radius: 2px;
-  padding: 8px 22px;
+  padding: 6px 20px;
   color: #2c2c54;
   background-color: #fff;
   border: 1px solid #2c2c54;
@@ -160,7 +163,7 @@ input {
   font-size: .7em;
   font-weight: 200;
   border-radius: 2px;
-  padding: 8px 22px;
+  padding: 6px 20px;
   background-color:#2c2c54;
   border: 1px solid #2c2c54;
   color: #fff;
@@ -233,8 +236,7 @@ input {
   padding: 20px;
   display: flex;
   background-color: #3498db;
-  justify-content: space-around;
-  
+  justify-content: space-around;  
 }
 
 .why-join-slogan {
@@ -260,7 +262,7 @@ input {
   border-radius: 3px;
   color: #fff;
   font-size: 16px;
-  width: 390px;
+  width: 31%;
   text-align: center;
   
 }
@@ -276,7 +278,7 @@ input {
 
 
 .why-join-item img {
-  width: 340px;
+  width: 100%;
   border-radius: 3px;
   opacity: 0.8;
   transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
@@ -342,7 +344,7 @@ input {
   border-radius: 3px;
   color: #fff;
   font-size: 16px;
-  width: 390px;
+  width: 33%;
   text-align: center;
 }
 
@@ -368,7 +370,7 @@ input {
 }
 
 .table-options table {
-  width: 600px;
+  width: 60%;
   margin:auto;
   border-radius: 3px;
   color: #fff;
@@ -389,7 +391,8 @@ input {
 }
 
 .table-options td {
-  padding: 14px;
+  padding: 2%;
+  // padding: 14px;
   text-align: center;  
 }
 
@@ -400,13 +403,15 @@ input {
 
 .table-options tr td:first-child {
   text-align: left;
-  padding-left: 20px;
-  font-size: 18px;
+  padding-left: 2%;
+  // padding-left: 20px;
+  font-size: 1em;
+  // font-size: 18px;
   font-weight: 300;
 }
 
 .table-options table h1 {
-  font-size: 20px;
+  font-size: 1.1em;
   font-weight: 300;
 }
 
